--- a/src/App.css
+++ b/src/App.css
@@ -146,21 +146,7 @@ section {
 .List .List-element {
   width: max-content;
   flex-wrap: nowrap;
-  /* animation: bg-shift 10s linear;
-  animation-timeline: view();
-  animation-direction: reverse; */
 }
-
-/* @keyframes bg-shift {
-  from {
-    background: rgb(0, 183, 255);
-    color: white;
-  }
-  to {
-    background: rgb(255, 48, 255);
-    color: black;
-  }
-} */
 
 .List-element {
   width: 100%;
@@ -234,4 +220,78 @@ section {
   opacity: 0.2;
   transform: translate(-30%, -30%);
   border-radius: 50%;
+}
+
+@media screen and (max-width: 600px) {
+  .card1-img {
+    width: 400px;
+    height: 250px;
+  }
+  .card1-text {
+    width: 70%;
+    opacity: 0.8;
+    font-size: small;
+    margin-left: 10px;
+  }
+  .List {
+    list-style-type: none;
+    display: flex;
+    width: 65%;
+    justify-content: center;
+    align-items: center;
+    margin-right: 30px;
+    gap: 5px;
+    mask: linear-gradient(
+      90deg,
+      transparent,
+      white 20%,
+      white 80%,
+      transparent
+    );
+  }
+  .List-element {
+    width: 70%;
+    position: relative;
+    display: flex;
+    background: black;
+    place-content: center;
+    place-items: center;
+    overflow: hidden;
+    border-radius: 3px;
+    padding: 3px;
+  }
+  .List-element::before {
+    content: "";
+    position: absolute;
+    background-image: linear-gradient(
+      270deg,
+      rgb(0, 183, 255),
+      rgb(255, 48, 255)
+    );
+    width: 100%;
+    height: 120%;
+    animation: rotBGimg 3.5s linear infinite;
+    transition: all 0.2s linear;
+  }
+  .List-element::after {
+    content: "";
+    background: black;
+    inset: 5px;
+    border-radius: 1.5px;
+  }
+  .List-element-text {
+    z-index: 1;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+    padding: 10px 15px;
+    margin: 0;
+    background-color: black;
+  }
+  .List .List-element {
+    width: max-content;
+    flex-wrap: nowrap;
+  }
 }
